# debian-gmsh

./: CMakeLists.txt
Graphics/: CMakeLists.txt
Plugin/: Bubbles.cpp  HomologyComputation.h
contrib/lbfgs/: alglibinternal.cpp
debian/: README.Debian  TODO  changelog  control  copyright  gmsh-doc.doc-base  gmsh-doc.docs  gmsh-doc.lintian-overrides  gmsh.desktop  gmsh.doc-base  gmsh.docs  gmsh.install  gmsh.links  gmsh.lintian-overrides  gmsh.menu  gmsh.pyinstall  gmsh16x16-smooth.xpm  gmsh_16x16.xpm  gmsh_32x32.xpm  java-gmsh.install  libgmsh-dev.install  libgmsh2.install  libjava-gmsh2.install  libjava-gmsh2.jlibs  prerm  python-gmsh.pyinstall  rules  upstream
debian/patches/: add-missing-headers.patch  add_missing_header.patch  alauzet.patch  api_demos.patch  cgns.patch  change_shared_library_name.patch  delete_gl2ps_from_source.patch  enable_tetgen.patch  fix_FTBFS_gcc-4.7_bamg.patch  fix_FTBFS_linking.patch  fix_gmshpy_import.patch  fix_java_wrapper_compilation.patch  fix_libdir.patch  fix_onelab_issue.patch  fix_script_header.patch  fix_spelling_errors.patch  pedantic.patch  series  skip_license_file.patch  switch_from_opencascade_to_oce.patch  switch_off_metis_and_tetgen.patch  tetgen.patch  use_gmm.patch  use_libann.patch  use_mmg3d.patch  use_tetgen.patch
debian/scripts/: get_orig.py  get_orig.sh
debian/tests/: check1  control
doc/texinfo/: gmsh.texi
projects/small_fem/tests/basis/: quad.geo
projects/small_fem/tests/cavity/: circle.geo  square.geo
tags/2.4.2.dfsg-5/debian/: changelog
tags/2.4.2.dfsg-5/debian/patches/: makefile.patch  melement.patch
tags/2.5.0.dfsg-3/debian/: control  gmsh.install
tags/2.5.0.dfsg-4/: changelog  gmsh.doc-base
tags/2.5.0.dfsg-4/patches/: fix-default-browser-and-editor.patch  scotchmetis.patch
tags/2.5.0.dfsg-5/: control  gmsh.info  menu  postinst  watch
tags/2.5.0.dfsg-6/: control
tags/2.5.0.dfsg-7/: changelog  control
tags/2.5.0.dfsg-7/patches/: fix-spelling-errors.patch
tags/2.5.0~svn20100727-1/debian/: README.source  control  copyright
tags/2.5.0~svn20100727-1/debian/patches/: gcc44.patch  metis.patch
trunk/debian/: README.Debian  TODO  changelog  control  copyright  postrm  rules
trunk/debian/patches/: 01_port_amd64_gcc40.dpatch  fix-default-browser-and-editor.patch  fix-spelling-errors.patch  scotchmetis.patch  series  stdlib.patch
utils/api_demos/: CMakeLists.txt  mainAntTweakBar.cpp  mainCartesian.cpp  mainElasticity.cpp
